--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ h1, h3{
 
 .weather-app{
     min-height: 100vh;
-    background-image: url(../images/day/cloudy.jpg);
+    background-image: url(../images/day/clear.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -227,6 +227,7 @@ table td , th{
 
 table img{
     opacity: 0.6;
+    width: 50%;
 }
 
 /*scrollbar*/
