--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
         <div class="panel">
             <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima voluptatem maxime eaque aliquam, expedita, tempore quis obcaecati suscipit esse nobis sunt laboriosam iusto illum odio quia sequi provident at iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ullam aperiam quibusdam sunt in soluta placeat mollitia fugiat atque vero accusamus reprehenderit molestias, provident perferendis omnis quos itaque. Qui, iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum harum cum suscipit tenetur! Magni neque optio aut magnam est! Molestiae pariatur culpa dolorum iure magnam, beatae doloremque? Rem, sit! At. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam iure aliquam quae non pariatur minima ratione dolor voluptas laboriosam in veritatis esse facilis, sed temporibus illum quaerat! Voluptas, perspiciatis nam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur totam blanditiis iusto reprehenderit aliquam modi corporis veniam? Rerum earum ex adipisci. Culpa omnis voluptatibus officia repellendus repudiandae ut, neque odio?</p> -->
             <form id="locationInput" action="/" method="post">
-                <input type="text" name="city" placeholder="Search Location..." id="" class="search">
+                <input type="text" name="city" placeholder="Search Location..." id="" class="search" autocomplete="off">
                 <button type="submit" class="submit">
                     <i class="fa-sharp fa-solid fa-magnifying-glass-location"></i>
                 </button>
