thunderstorm bg added , popular cities removed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,12 +45,12 @@
                 </button>
             </form>
 
-            <ul class="" cities>
+            <!-- <ul class="" cities>
                 <li class="city">New York</li>
                 <li class="city">Mumbai</li>
                 <li class="city">Paris</li>
                 <li class="city">Peru</li>
-            </ul>
+            </ul> -->
 
             <ul class="details">
                 <h4>Weather Details</h4>
